--- a/.gitignore
+++ b/.gitignore
@@ -1756,3 +1756,168 @@ Dark Souls Like/Assets/Data/Imports/Rune Weapons Pack/Rune Weapons Tier 1/Rune_S
 Dark Souls Like/Assets/Data/Imports/Rune Weapons Pack/Rune Weapons Tier 1/Rune_Sword/Textures/Rune_Sword_Occlusion.png
 Dark Souls Like/Assets/Data/Imports/Rune Weapons Pack/Rune Weapons Tier 1/Rune_Sword/Textures/Rune_Sword_Occlusion.png.meta
 Dark Souls Like/Assets/Scenes/TestArea.unity
+Surprise/PC Build/MonoBleedingEdge/etc/mono/2.0/Browsers/Compat.browser
+Surprise/PC Build/MonoBleedingEdge/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+Surprise/PC Build/MonoBleedingEdge/etc/mono/2.0/machine.config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/2.0/settings.map
+Surprise/PC Build/MonoBleedingEdge/etc/mono/2.0/web.config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.0/Browsers/Compat.browser
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.0/DefaultWsdlHelpGenerator.aspx
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.0/machine.config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.0/settings.map
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.0/web.config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.5/Browsers/Compat.browser
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.5/DefaultWsdlHelpGenerator.aspx
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.5/machine.config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.5/settings.map
+Surprise/PC Build/MonoBleedingEdge/etc/mono/4.5/web.config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/browscap.ini
+Surprise/PC Build/MonoBleedingEdge/etc/mono/config
+Surprise/PC Build/MonoBleedingEdge/etc/mono/mconfig/config.xml
+Surprise/PC Build/Surprise.exe
+Surprise/PC Build/Surprise_Data/app.info
+Surprise/PC Build/Surprise_Data/boot.config
+Surprise/PC Build/Surprise_Data/globalgamemanagers
+Surprise/PC Build/Surprise_Data/globalgamemanagers.assets
+Surprise/PC Build/Surprise_Data/level0
+Surprise/PC Build/Surprise_Data/level0.resS
+Surprise/PC Build/Surprise_Data/level1
+Surprise/PC Build/Surprise_Data/level1.resS
+Surprise/PC Build/Surprise_Data/level2
+Surprise/PC Build/Surprise_Data/level2.resS
+Surprise/PC Build/Surprise_Data/level3
+Surprise/PC Build/Surprise_Data/level3.resS
+Surprise/PC Build/Surprise_Data/Managed/Assembly-CSharp.dll
+Surprise/PC Build/Surprise_Data/Managed/Mono.Security.dll
+Surprise/PC Build/Surprise_Data/Managed/mscorlib.dll
+Surprise/PC Build/Surprise_Data/Managed/netstandard.dll
+Surprise/PC Build/Surprise_Data/Managed/Newtonsoft.Json.dll
+Surprise/PC Build/Surprise_Data/Managed/System.ComponentModel.Composition.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Configuration.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Core.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Data.DataSetExtensions.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Data.dll
+Surprise/PC Build/Surprise_Data/Managed/System.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Drawing.dll
+Surprise/PC Build/Surprise_Data/Managed/System.EnterpriseServices.dll
+Surprise/PC Build/Surprise_Data/Managed/System.IO.Compression.dll
+Surprise/PC Build/Surprise_Data/Managed/System.IO.Compression.FileSystem.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Net.Http.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Numerics.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Runtime.Serialization.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Security.dll
+Surprise/PC Build/Surprise_Data/Managed/System.ServiceModel.Internals.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Transactions.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Xml.dll
+Surprise/PC Build/Surprise_Data/Managed/System.Xml.Linq.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Postprocessing.Runtime.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.ProGrids.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Analytics.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Configuration.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Device.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Environments.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Environments.Internal.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Internal.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Networking.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Registration.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Scheduler.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Telemetry.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Services.Core.Threading.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.TextMeshPro.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.Timeline.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.VisualScripting.Antlr3.Runtime.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.VisualScripting.Core.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.VisualScripting.Flow.dll
+Surprise/PC Build/Surprise_Data/Managed/Unity.VisualScripting.State.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.AccessibilityModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.AIModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.AndroidJNIModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.AnimationModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ARModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.AssetBundleModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.AudioModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ClothModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ClusterInputModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ClusterRendererModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.CoreModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.CrashReportingModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.DirectorModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.DSPGraphModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.GameCenterModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.GIModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.GridModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.HotReloadModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ImageConversionModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.IMGUIModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.InputLegacyModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.InputModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.JSONSerializeModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.LocalizationModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.NVIDIAModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ParticleSystemModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.Physics2DModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.PhysicsModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ProfilerModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.RuntimeInitializeOnLoadManagerInitializerModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.SharedInternalsModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.SpriteMaskModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.SpriteShapeModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.StreamingModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.SubstanceModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.SubsystemsModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TerrainModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TextCoreFontEngineModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TextCoreTextEngineModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TextRenderingModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TilemapModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.TLSModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UI.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UIElementsModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UIElementsNativeModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UIModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UmbraModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UNETModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityAnalyticsCommonModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityConnectModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityCurlModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.VehiclesModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.VFXModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.VideoModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.VirtualTexturingModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.VRModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.WindModule.dll
+Surprise/PC Build/Surprise_Data/Managed/UnityEngine.XRModule.dll
+Surprise/PC Build/Surprise_Data/Resources/unity default resources
+Surprise/PC Build/Surprise_Data/Resources/unity_builtin_extra
+Surprise/PC Build/Surprise_Data/RuntimeInitializeOnLoads.json
+Surprise/PC Build/Surprise_Data/ScriptingAssemblies.json
+Surprise/PC Build/Surprise_Data/sharedassets0.assets
+Surprise/PC Build/Surprise_Data/sharedassets0.assets.resS
+Surprise/PC Build/Surprise_Data/sharedassets0.resource
+Surprise/PC Build/Surprise_Data/sharedassets1.assets
+Surprise/PC Build/Surprise_Data/sharedassets1.assets.resS
+Surprise/PC Build/Surprise_Data/sharedassets2.assets
+Surprise/PC Build/Surprise_Data/sharedassets2.assets.resS
+Surprise/PC Build/Surprise_Data/sharedassets2.resource
+Surprise/PC Build/Surprise_Data/sharedassets3.assets
+Surprise/PC Build/Surprise_Data/StreamingAssets/UnityServicesProjectConfiguration.json
+Surprise/PC Build/UnityCrashHandler64.exe
+Surprise/PC Build/UnityPlayer.dll
+Surprise/ProjectSettings/Packages/com.unity.progrids/Settings.json
+Surprise/ProjectSettings/ProjectSettings.asset
+Surprise/UserSettings/EditorUserSettings.asset
+Surprise/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+Surprise/UserSettings/Layouts/default-2021.dwlt
+Surprise/UserSettings/Search.settings
