Small UI Tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -1921,3 +1921,4 @@ Surprise/UserSettings/EditorUserSettings.asset
 Surprise/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 Surprise/UserSettings/Layouts/default-2021.dwlt
 Surprise/UserSettings/Search.settings
+Surprise/Gift.zip
