--- a/.gitignore
+++ b/.gitignore
@@ -1922,3 +1922,4 @@ Surprise/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 Surprise/UserSettings/Layouts/default-2021.dwlt
 Surprise/UserSettings/Search.settings
 Surprise/Gift.zip
+*.zip
